# ChessMate

./: .gitignore  CMakeLists.txt  ChessMate  README.md
project/include/: basic_funcs.hpp  board.hpp  chess.hpp  figures.hpp  gameplay.hpp  logic.hpp  menu.hpp  temp.hpp  textures.hpp  utils.hpp
project/src/: basic_funcs.cpp  board.cpp  chess.cpp  figures.cpp  gameplay.cpp  logic.cpp  main.cpp  menu.cpp  temp.cpp  textures.cpp  utils.cpp
